--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2822,7 +2822,7 @@ input, select, textarea {
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("images/overlay1.png"), url("../../images/header.jpg");
+			background-image: url("images/overlay1.png"), url("../../images/dribbble.gif");
 			background-size: auto,							cover;
 		}
 
@@ -3509,11 +3509,303 @@ input, select, textarea {
 
 
 .my_stroy{
-	font-family:Verdana, Geneva, Tahoma, sans-serif;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 18px;
 }
 
 .pj_detail{
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 16px;
+}
+
+.slideshow_container {
+	display: flex;
+ }
+
+ .session {
+	flex: 1;
+	margin: 10px;
+ }
+
+ .slideshow {
+	position: relative;
+	width: 100%;
+	height: 300px;
+	overflow: hidden;
+ }
+
+ .slideshow img {
+	position: absolute;
+	width: 300px;
+	height: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+ }
+
+ .slideshow img:first-child {
+	opacity: 1;
+ }
+
+ .prev,
+ .next {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 24px;
+	color: #fff;
+	padding: 10px;
+	border: none;
+	cursor: pointer;
+	transition: background 0.3s ease-in-out;
+ }
+
+ .prev {
+	left: 10px;
+ }
+
+ .next {
+	right: 10px;
+ }
+
+ .prev:hover,
+ .next:hover {
+	background: rgba(0, 0, 0, 0.8);
+ }
+
+
+
+ .lb-loader,
+ .lightbox {
+	text-align: center;
+	line-height: 0;
+	position: absolute;
+	left: 0;
+ }
+ body.lb-disable-scrolling {
+	overflow: hidden;
+ }
+ .lightboxOverlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	background-color: #000;
+	filter: alpha(Opacity=80);
+	opacity: 0.8;
+	display: none;
+ }
+ .lightbox {
+	width: 100%;
+	z-index: 10000;
+	font-weight: 400;
+	outline: 0;
+ }
+ .lightbox .lb-image {
+	display: block;
+	height: auto;
+	max-width: 1000px;
+	max-height: 500px;
+	border-radius: 3px;
+	border: 4px solid #fff;
+ }
+ .lightbox a img {
+	border: none;
+ }
+ .lb-outerContainer {
+	position: relative;
+	width: 250px;
+	height: 250px;
+	margin: 0 auto;
+	border-radius: 4px;
+	background-color: #fff;
+ }
+ .lb-outerContainer:after {
+	content: "";
+	display: table;
+	clear: both;
+ }
+ .lb-loader {
+	top: 43%;
+	height: 25%;
+	width: 100%;
+ }
+ .lb-cancel {
+	display: block;
+	width: 32px;
+	height: 32px;
+	margin: 0 auto;
+	background: url(../images/loading.gif) no-repeat;
+ }
+ .lb-nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 10;
+ }
+ .lb-container > .nav {
+	left: 0;
+ }
+ .lb-nav a {
+	outline: 0;
+	background-image: url(data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==);
+ }
+ .lb-next,
+ .lb-prev {
+	height: 100%;
+	cursor:pointer;
+	display: block;
+ }
+ .lb-nav a.lb-prev {
+	width: 34%;
+	left: 0;
+	float: left;
+	background: url(../images/prev.png) left 48% no-repeat;
+	filter: alpha(Opacity=0);
+	opacity: 0;
+	-webkit-transition: opacity 0.6s;
+	-moz-transition: opacity 0.6s;
+	-o-transition: opacity 0.6s;
+	transition: opacity 0.6s;
+ }
+ .lb-nav a.lb-prev:hover {
+	filter: alpha(Opacity=100);
+	opacity: 1;
+ }
+ .lb-nav a.lb-next {
+	width: 64%;
+	right: 0;
+	float: right;
+	background: url(../images/next.png) right 48% no-repeat;
+	filter: alpha(Opacity=0);
+	opacity: 0;
+	-webkit-transition: opacity 0.6s;
+	-moz-transition: opacity 0.6s;
+	-o-transition: opacity 0.6s;
+	transition: opacity 0.6s;
+ }
+ .lb-nav a.lb-next:hover {
+	filter: alpha(Opacity=100);
+	opacity: 1;
+ }
+ .lb-dataContainer {
+	margin: 0 auto;
+	padding-top: 5px;
+	width: 100%;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+ }
+ .lb-dataContainer:after {
+	content: "";
+	display: table;
+	clear: both;
+ }
+ .lb-data {
+	padding: 0 4px;
+	color: #ccc;
+ }
+ .lb-data .lb-details {
+	width: 85%;
+	float: left;
+	text-align: left;
+	line-height: 1.1em;
+ }
+ .lb-data .lb-caption {
+	font-size: 13px;
+	font-weight: 700;
+	line-height: 1em;
+ }
+ .lb-data .lb-caption a {
+	color: #4ae;
+ }
+ .lb-data .lb-number {
+	display: block;
+	clear: left;
+	padding-bottom: 1em;
+	font-size: 12px;
+	color: #999;
+ }
+ .lb-data .lb-close {
+	display: block;
+	float: right;
+	width: 30px;
+	height: 30px;
+	background: url(../images/close.png) top right no-repeat;
+	text-align: right;
+	outline: 0;
+	filter: alpha(Opacity=70);
+	opacity: 0.7;
+	-webkit-transition: opacity 0.2s;
+	-moz-transition: opacity 0.2s;
+	-o-transition: opacity 0.2s;
+	transition: opacity 0.2s;
+ }
+ .lb-data .lb-close:hover {
+	cursor: pointer;
+	filter: alpha(Opacity=100);
+	opacity: 1;
+ }
+
+.mypic{
+	width: 200px;
+	padding-left: 100px;
+}
+
+.myinfo{
+	animation: forwards;
+}
+
+/* .an1{
+	opacity: 0;
+} */
+
+.an1 {
+	animation: fadeIn 3s;
+	-webkit-animation: fadeIn 3s;
+	-moz-animation: fadeIn 3s;
+	-o-animation: fadeIn 3s;
+	-ms-animation: fadeIn 3s;
+  }
+  
+  @keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-moz-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-webkit-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-o-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+  
+  @-ms-keyframes fadeIn {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+  }
+
+
+.btn-moveTop{
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: none;
+  cursor: pointer;
+  padding-left: 3px;
+  padding-right: 4px;
 }
